Bug 1022669 - Do not lock screen for audio. r=snorp